--- a/src/item_007/item7.ipynb
+++ b/src/item_007/item7.ipynb
@@ -14,11 +14,11 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.3 64-bit ('python-features': pipenv)",
-   "display_name": "Python 3.8.3 64-bit ('python-features': pipenv)",
+   "name": "Python 3.8.3 64-bit ('py-effective-py': pipenv)",
+   "display_name": "Python 3.8.3 64-bit ('py-effective-py': pipenv)",
    "metadata": {
     "interpreter": {
-     "hash": "72d857dadf07e42bf16e31285434fc2d8f4ad38f240229afb6ae195783c32492"
+     "hash": "bf53ecf2be5b0c89778fbd17a3e30ef364a8b92138249caa59ed972682d3f38a"
     }
    }
   }
@@ -171,11 +171,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "\n"
+    "# using unpacking syntax \n",
+    "def bubble_sort(a):\n",
+    "    for _ in range(len(a)):\n",
+    "        for i in range(1, len(a)):\n",
+    "            if a[i] < a[i-1]:\n",
+    "                a[i-1], a[i] = a[i], a[i-1] # unpacking\n",
+    "names = ['pretzels', 'carrots', 'arugula', 'bacon']\n",
+    "bubble_sort(names)\n",
+    "print (names)\n"
    ]
+  },
+  {
+   "source": [
+    "- the right side of the assignment a\\[i], a\\[i-1] is evaluated first\n",
+    "- its values are put into a new temporary, unnamed tuple.\n",
+    "- the left side of the assignment is actually an unpacking pattern that instructs how the     unpacking is done.\n",
+    "- the a\\[i-1] variable will receive the first value of the tuple which is a\\[i]\n",
+    "- the a\\[i] variable will receive the second value of the tuple which is a\\[i-1]\n",
+    "- the tuple gets deleted"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# a bit \"noisy\" indexing implementation\n",
+    "snacks = [('bacon', 350), ('donut', 240), ('muffin', 190)] \n",
+    "for i in range(len(snacks)):\n",
+    "    item = snacks[i]\n",
+    "    name = item[0]\n",
+    "    calories = item[1]\n",
+    "    print (f'#{i+1}: {name} has {calories} calories') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "snacks = [('bacon', 350), ('donut', 240), ('muffin', 190)] \n",
+    "for rank, (name, calories) in enumerate(snacks, 1):\n",
+    "    print (f'#{rank}: {name} has {calories} calories') "
+   ]
+  },
+  {
+   "source": [
+    "- enumerate : The enumerate() method adds counter to an iterable and returns it (the enumerate object)\n",
+    "- The Pythonic way to write this type of loop.\n",
+    "- Short and easy to understand   "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
