--- a/src/item_011/item11.ipynb
+++ b/src/item_011/item11.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "Things to Remember\n",
     "- Avoid being verbose when slicing: Don't supply 0 for the start index or the length of the sequence for the end index\n",
-    "- Slicing is forgiving of start or end indexes that are out of bounds, which means it's easy to express slices on the front or back boundaries of a sequence (like a[:20] or a[-20:])\n",
+    "- Slicing is forgiving of start or end indexes that are out of bounds, which means it's easy to express slices on the front or back boundaries of a sequence (like a\\[:20\\] or a\\[-20:\\])\n",
     "- Assigning to a list slice replaces that range in the original sequence with what's referenced even if the lengths are different.       \n",
     "\n"
    ],
