--- a/src/03_functions/item_020/item20.ipynb
+++ b/src/03_functions/item_020/item20.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "source": [
-    "- if you can't see the docstring when calling careful_divide close the this file and re-open it to see if you fix the problem"
+    "- if you can't see the docstring when calling careful_divide close this file and re-open it to see if you fix the problem"
    ],
    "cell_type": "markdown",
    "metadata": {}
